practice area added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                     colors: {
                         clifford: '#da373d',
                         brown: '#B68C5A',
-                        'gradient-color-stop': 'rgba(17, 17, 17, 0.00)'
+                        'gradient-color-stop': 'rgba(17, 17, 17, 0.00)',
+                        'light-yellow': '#E7E7E7'
                     },
                     backgroundImage: {
                         'banner-bg': "url('./images/banner.png')"
@@ -159,7 +160,81 @@
         </div>
     </header>
     <main>
-
+        <!-- practice area -->
+        <section class="max-w-7xl mx-auto py-28">
+            <h2 class="font-garamond text-4xl font-extrabold text-center">The Legal Practice Area</h2>
+            <p class="pt-6 pb-16 font-poppins max-w-[75%] mx-auto text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <!-- cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- card 1 -->
+                <div class="p-16  border-b border-light-yellow">
+                    <div>
+                        <img class="mx-auto" src="./images/business.png" alt="">
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-8 mb-6 text-3xl font-extrabold font-garamond">Business Law</h3>
+                        <p class="leading-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <img class="mx-auto" src="./images/Frame.png" alt="">
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="p-16  border-b border-r border-l border-light-yellow">
+                    <div>
+                        <img class="mx-auto" src="./images/criminal.png" alt="">
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-8 mb-6 text-3xl font-extrabold font-garamond">Criminal Law</h3>
+                        <p class="leading-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <img class="mx-auto" src="./images/Frame.png" alt="">
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="p-16  border-b">
+                    <div>
+                        <img class="mx-auto" src="./images/child.png" alt="">
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-8 mb-6 text-3xl font-extrabold font-garamond">Child Support</h3>
+                        <p class="leading-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <img class="mx-auto" src="./images/Frame.png" alt="">
+                    </div>
+                </div>
+                <!-- card 4 -->
+                <div class="p-16 ">
+                    <div>
+                        <img class="mx-auto" src="./images/education.png" alt="">
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-8 mb-6 text-3xl font-extrabold font-garamond">Education Law</h3>
+                        <p class="leading-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <img class="mx-auto" src="./images/Frame.png" alt="">
+                    </div>
+                </div>
+                <!-- card 5 -->
+                <div class="p-16  border-r border-l border-light-yellow">
+                    <div>
+                        <img class="mx-auto" src="./images/divorce.png" alt="">
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-8 mb-6 text-3xl font-extrabold font-garamond">Divorce Law</h3>
+                        <p class="leading-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <img class="mx-auto" src="./images/Frame.png" alt="">
+                    </div>
+                </div>
+                <!-- card 6 -->
+                <div class="p-16 ">
+                    <div>
+                        <img class="mx-auto" src="./images/tax.png" alt="">
+                    </div>
+                    <div class="text-center">
+                        <h3 class="mt-8 mb-6 text-3xl font-extrabold font-garamond">Tax Law</h3>
+                        <p class="leading-6 mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                        <img class="mx-auto" src="./images/Frame.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- client section -->
     </main>
     <footer>
 
