--- a/index.html
+++ b/index.html
@@ -334,6 +334,71 @@
             </div>
         </section>
         <!-- faq section -->
+        <section class="my-28">
+            <h2 class="font-extrabold text-4xl font-garamond text-center">Frequently Asked Any Questions</h2>
+            <p class="max-w-[65%] leading-6 text-center mx-auto pb-16 pt-6">There are many variations of passages of
+                Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <div class="flex gap-7 items-center">
+                <!-- accordion -->
+                <div class="space-y-7 flex-1">
+                    <!-- first question -->
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-2xl font-extrabold font-garamond">
+                            Are application fee waivers available?
+                        </div>
+                        <div class="collapse-content">
+                            <p class="leading-6">There are many variations of passages of Lorem Ipsum available, but the
+                                majority have
+                                suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                    </div>
+                    <!-- second question -->
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-2xl font-extrabold font-garamond">
+                            Click to open this one and close others
+                        </div>
+                        <div class="collapse-content">
+                            <p class="leading-6">There are many variations of passages of Lorem Ipsum available, but the
+                                majority have
+                                suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                    </div>
+                    <!-- third question -->
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title  text-2xl font-extrabold font-garamond">
+                            What is Javascript?
+                        </div>
+                        <div class="collapse-content">
+                            <p class="leading-6">There are many variations of passages of Lorem Ipsum available, but the
+                                majority have
+                                suffered alteration in some form, by injected humour, . </p>
+                        </div>
+                    </div>
+                    <!-- fourth question -->
+                    <div class="collapse collapse-plus bg-base-200">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title  text-2xl font-extrabold font-garamond">
+                            What is css?
+                        </div>
+                        <div class="collapse-content">
+                            <p class="leading-6">There are many variations of passages of Lorem Ipsum available, but the
+                                majority have
+                                suffered alteration in some form, by injected humour, . Lorem ipsum dolor, sit amet
+                                consectetur adipisicing elit. Corrupti minus aliquid ipsam, repellat nostrum cupiditate
+                                obcaecati at ut in recusandae cumque tenetur temporibus et, eum blanditiis sint quod
+                                consequatur sapiente. </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- image -->
+                <div class="flex-1">
+                    <img src="./images/faq.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
